--- a/src/main/resources/View/Admin_Register.fxml
+++ b/src/main/resources/View/Admin_Register.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="623.0" prefWidth="929.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.hospital_system.controller.Register.AdminFormController">
+<AnchorPane fx:id="AdminAnchorePane" prefHeight="623.0" prefWidth="929.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.hospital_system.controller.Register.AdminFormController">
    <children>
       <ImageView fitHeight="609.0" fitWidth="455.0" layoutX="7.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -26,7 +26,7 @@
       </ImageView>
       <Text layoutX="460.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Thin 100;" text="Sing Up Admin Account" textAlignment="CENTER" wrappingWidth="418.1368408203125">
          <font>
-            <Font name="System Bold" size="35.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
          <fill>
             <LinearGradient endX="1.0" endY="1.0" startX="0.3333333179806218" startY="0.2878788023283988">
@@ -45,42 +45,42 @@
             </LinearGradient>
          </fill>
       </Text>
-      <JFXTextField fx:id="txtContactNumber" layoutX="530.0" layoutY="308.0" prefHeight="26.0" prefWidth="279.0" promptText="Contact Number">
+      <JFXTextField fx:id="txtContactNumber" layoutX="531.0" layoutY="330.0" prefHeight="26.0" prefWidth="279.0" promptText="Contact Number">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </JFXTextField>
-      <JFXButton id="btnLogin" fx:id="btnSingUpAdmin" layoutX="587.0" layoutY="469.0" onAction="#btnSingUpAdminAction" prefHeight="40.0" prefWidth="166.0" style="-fx-background-color: #000066;" text="Sing Up" textFill="WHITE">
+      <JFXButton id="btnLogin" fx:id="btnSingUpAdmin" layoutX="613.0" layoutY="481.0" onAction="#btnSingUpAdminAction" prefHeight="30.0" prefWidth="122.0" style="-fx-background-color: #000066;" text="Sing Up" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
-      <JFXTextField fx:id="txtName" layoutX="530.0" layoutY="188.0" prefHeight="26.0" prefWidth="279.0" promptText="Name">
+      <JFXTextField fx:id="txtName" layoutX="531.0" layoutY="188.0" prefHeight="26.0" prefWidth="279.0" promptText="Name">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </JFXTextField>
-      <JFXTextField fx:id="txtNIC" layoutX="530.0" layoutY="229.0" prefHeight="26.0" prefWidth="279.0" promptText="NIC">
+      <JFXTextField fx:id="txtNIC" layoutX="531.0" layoutY="236.0" prefHeight="26.0" prefWidth="279.0" promptText="NIC">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </JFXTextField>
-      <JFXTextField fx:id="txtEmail" layoutX="530.0" layoutY="349.0" prefHeight="26.0" prefWidth="279.0" promptText="Email">
+      <JFXTextField fx:id="txtEmail" layoutX="531.0" layoutY="377.0" prefHeight="26.0" prefWidth="279.0" promptText="Email">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </JFXTextField>
-      <JFXTextField fx:id="txtPassword" layoutX="530.0" layoutY="389.0" prefHeight="26.0" prefWidth="279.0" promptText="Password ">
+      <JFXTextField fx:id="txtPassword" layoutX="531.0" layoutY="426.0" prefHeight="26.0" prefWidth="279.0" promptText="Password ">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </JFXTextField>
-      <JFXTextField fx:id="txtAddress" layoutX="529.0" layoutY="268.0" prefHeight="26.0" prefWidth="279.0" promptText="Address">
+      <JFXTextField fx:id="txtAddress" layoutX="530.0" layoutY="283.0" prefHeight="26.0" prefWidth="279.0" promptText="Address">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </JFXTextField>
-      <JFXButton fx:id="Btnback" layoutX="431.0" layoutY="14.0" onAction="#btnbackAction" prefHeight="47.0" prefWidth="55.0" text="Button">
+      <JFXButton layoutX="414.0" layoutY="4.0" onAction="#btnbackAction" prefHeight="47.0" prefWidth="55.0" text="Button">
          <font>
             <Font size="1.0" />
          </font>
