--- a/src/main/resources/View/Patient_View.fxml
+++ b/src/main/resources/View/Patient_View.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXBadge?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -51,5 +52,10 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
+      <Button layoutX="27.0" layoutY="52.0" mnemonicParsing="false" onAction="#btnActionReport" prefHeight="26.0" prefWidth="86.0" style="-fx-background-color: red;" text="Print" textFill="#050000">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
