--- a/src/main/resources/View/Admin_Register.fxml
+++ b/src/main/resources/View/Admin_Register.fxml
@@ -26,7 +26,7 @@
       </ImageView>
       <Text layoutX="460.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Thin 100;" text="Sing Up Admin Account" textAlignment="CENTER" wrappingWidth="418.1368408203125">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="16.0" />
          </font>
          <fill>
             <LinearGradient endX="1.0" endY="1.0" startX="0.3333333179806218" startY="0.2878788023283988">
@@ -50,9 +50,9 @@
             <Insets />
          </opaqueInsets>
       </JFXTextField>
-      <JFXButton id="btnLogin" fx:id="btnSingUpAdmin" layoutX="613.0" layoutY="481.0" onAction="#btnSingUpAdminAction" prefHeight="30.0" prefWidth="122.0" style="-fx-background-color: #000066;" text="Sing Up" textFill="WHITE">
+      <JFXButton id="btnLogin" fx:id="btnSingUpAdmin" layoutX="534.0" layoutY="481.0" onAction="#btnSingUpAdminAction" prefHeight="30.0" prefWidth="279.0" style="-fx-background-color: #000066;" text="Sign Up" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </JFXButton>
       <JFXTextField fx:id="txtName" layoutX="531.0" layoutY="188.0" prefHeight="26.0" prefWidth="279.0" promptText="Name">
