--- a/src/main/resources/View/Patient_Appointment.fxml
+++ b/src/main/resources/View/Patient_Appointment.fxml
@@ -7,13 +7,17 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.hospital_system.controller.Patient.PatientAppointment">
    <children>
       <AnchorPane fx:id="DashboardLoadAnchorpane" onDragDetected="#DashboardLoadAnchorpaneAction" prefHeight="583.0" prefWidth="724.0">
          <children>
+            <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#c9d2fa" height="506.0" layoutX="515.0" layoutY="66.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
             <Label layoutX="7.0" layoutY="4.0" prefHeight="26.0" prefWidth="79.0" text="Patient ID :-" textFill="#485cbc">
                <font>
                   <Font name="System Bold" size="13.0" />
@@ -24,29 +28,30 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <TableView fx:id="tlbDctor" fixedCellSize="-5.0" layoutX="10.0" layoutY="99.0" prefHeight="474.0" prefWidth="422.0">
+            <TableView fx:id="tlbDctor" fixedCellSize="-8.0" layoutX="10.0" layoutY="67.0" prefHeight="506.0" prefWidth="494.0">
               <columns>
-                <TableColumn fx:id="colId" prefWidth="59.99999809265137" text="ID" />
-                <TableColumn fx:id="colDoctorName" prefWidth="152.79999542236328" text="Doctor Name" />
-                  <TableColumn fx:id="colSpecialty" prefWidth="91.99993896484375" text="Specialty" />
-                  <TableColumn fx:id="colAvailability" prefWidth="112.800048828125" text="Availability" />
+                <TableColumn fx:id="colId" prefWidth="47.19997978210449" text="ID" />
+                <TableColumn fx:id="colDoctorName" prefWidth="129.60001373291016" text="Doctor Name" />
+                  <TableColumn fx:id="colSpecialty" prefWidth="119.199951171875" text="Specialty" />
+                  <TableColumn fx:id="colAvailability" prefWidth="92.00006103515625" text="Availability" />
+                  <TableColumn fx:id="colPrice" prefWidth="112.800048828125" text=" Price" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <JFXTextField fx:id="txtDoctorID" layoutX="462.0" layoutY="193.0" prefHeight="26.0" prefWidth="209.0" promptText="Doctor ID" />
-            <DatePicker fx:id="txtdatePicker" layoutX="461.0" layoutY="265.0" prefHeight="26.0" prefWidth="210.0" promptText="Date" />
+            <JFXTextField fx:id="txtDoctorID" layoutX="522.0" layoutY="299.0" prefHeight="26.0" prefWidth="187.0" promptText="Doctor ID" />
+            <DatePicker fx:id="txtdatePicker" layoutX="521.0" layoutY="371.0" prefHeight="26.0" prefWidth="187.0" promptText="Date" />
             <JFXBadge />
-            <JFXTextField fx:id="txtTime" layoutX="462.0" layoutY="323.0" prefHeight="26.0" prefWidth="209.0" promptText="Time" />
-            <JFXButton fx:id="btnAdd" layoutX="503.0" layoutY="390.0" onAction="#btnAddAction" prefHeight="30.0" prefWidth="126.0" style="-fx-background-color: #668cff;" text="ADD">
+            <JFXTextField fx:id="txtTime" layoutX="522.0" layoutY="429.0" prefHeight="26.0" prefWidth="187.0" promptText="Time" />
+            <JFXButton fx:id="btnAdd" layoutX="552.0" layoutY="495.0" onAction="#btnAddAction" prefHeight="30.0" prefWidth="126.0" style="-fx-background-color: #668cff;" text="ADD">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXButton>
-            <Label alignment="CENTER" layoutX="494.0" layoutY="106.0" prefHeight="30.0" prefWidth="144.0" text="Appointment" textFill="#039953">
+            <Label alignment="CENTER" layoutX="544.0" layoutY="238.0" prefHeight="30.0" prefWidth="144.0" text="Appointment" textFill="#02562d">
                <font>
-                  <Font name="System Bold" size="17.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </Label>
             <Label fx:id="lblPatientID" layoutX="86.0" layoutY="4.0" prefHeight="26.0" prefWidth="94.0" text="-" textFill="#485cbc">
@@ -54,6 +59,11 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
+            <ImageView fitHeight="233.0" fitWidth="207.0" layoutX="511.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Image/Logo_enhanced.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
